--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <section class='name'>
           <h1 id='abigail'>abigai</h1>
           <h1 id='mitchell'>mitchel</h1>
-            <svg class="line-left" height="10" width="110">
+            <svg id="line-left" height="10" width="110">
               <path d='m100 10, l-90 0'
               style="stroke:rgb(0, 0, 0);stroke-width:3" />
             </svg>
           <section class='dev-container'>
             <h2 id='web-dev'>full stack web developer</h2>
-              <svg class="line-vertical" height="410" width="10">
+              <svg id="line-vertical" height="410" width="10">
                 <path d='m10 10, l0 410'
                 style="stroke:rgb(0, 0, 0);stroke-width:3" />
             </svg>
@@ -53,7 +53,7 @@
     <div class='panel' id='about-panel' data-color='black'>
     <div class='section-container' id='about-container'>
       <h1 class='section-header' id='header-about'>about me</h1>
-        <svg class='line-about-me' height="10" width="420">
+        <svg id='line-about-me' height="10" width="420">
           <path d='m420 10, l-420 0'/>
         </svg>
       <section class='about'>
@@ -84,7 +84,7 @@
     <div class='panel' id='work-panel' data-color='cream'>
       <div class='section-container' id='work-container'>
         <h1 class='section-header' id='header-work'>work
-          <svg class="line-work" height="10" width="525">
+          <svg id='line-work' height='10' width='525'>
             <path d='m525 10, l-525 0'>
           </svg>
           </h1>
@@ -101,6 +101,9 @@
               <li>Photoshop</li>
             </ul>
           </div>
+          <div id='flashcards'>
+            <p>flashcards</p>
+          </div>
         </section>
       </div>
     </div>
@@ -108,7 +111,7 @@
     <div class='panel' id='contact-panel' data-color='cream'>
       <div class='section-container' id='contact-container'>
         <h1 class='section-header' id='header-contact'>contact</h1>
-        <svg class='line-contact' height="10" width="420">
+        <svg id='line-contact' height="10" width="420">
             <path d='m420 10, l-420 0'/>
         </svg>
         <section class='contact'>
@@ -132,7 +135,7 @@
       </div>
     </div>
   </main>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src='main.js'></script>
   </body>
  
