--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </div>
   </main>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src='main.js'></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src='main.js'></script>
   </body>
  
