added follow links

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </ul>
           </div>
           <div id='flashcards'>
-            <p>flashcards</p>
+            <h3><a href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></p>
           </div>
         </section>
       </div>
@@ -124,9 +124,9 @@
               <h4>follow</h4>
               <div id='follow'>
                 <ul>
-                  <li id='follow-link'>Github</li>
-                  <li id='follow-link'>Linkdin</li>
-                  <li id='follow-link'>Facebook</li>
+                  <li id='follow-link'><a class='strike-through' href='https://github.com/abigailmitchell4'>Github</a></li>
+                  <li id='follow-link'><a class='strike-through' href='https://linkedin.com/in/abigail-mitchell-283965185' >Linkdin</a></li>
+                  <li id='follow-link'><a class='strike-through' href='https://www.instagram.com/abbyamour/' >Instagram</a></li>
                 </ul>
               </div>
             </div>
