--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
    
     <div class='panel' id='about-panel' data-color='black'>
     <div class='section-container' id='about-container'>
-      <h1 class='section-header' id='header-about'>about me</h1>
+        <section class='about'>
+      <h1 class='section-header' id='header-about'>about me
         <svg id='line-about-me' height="10" width="420">
           <path d='m420 10, l-420 0'/>
         </svg>
-      <section class='about'>
+      </h1>
+      
         <div id='about-text'>
           <p class='intro-span' id='slc-span'>based in 
           <br />
@@ -76,8 +78,8 @@
           <!-- <img id='headshot' src='./images/Abigail_headshot_bw.jpg'/> -->
         </section>
         <p class='intro-span' id='extra-info-span'>
-            <span id='about-hello-span'>hello,</span> i'm a twenty-five year old developer with a visual art background. i received my BFA from the University of Utah in 2018. i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
-          </p>
+          <span id='about-hello-span'>hello,</span> i'm a twenty-five year old developer with a visual art background. in 2018 i received my BFA and BS of Psychology from the University of Utah. with a love for minimalism and color, i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
+        </p>
       </div>
     </div>
 
@@ -87,7 +89,7 @@
           <svg id='line-work' height='10' width='525'>
             <path d='m525 10, l-525 0'>
           </svg>
-          </h1>
+        </h1>
         <section class='work'>
           <div class='skills-container'>
             <h3 id='skills-text'>skills</h3>
@@ -110,10 +112,11 @@
 
     <div class='panel' id='contact-panel' data-color='cream'>
       <div class='section-container' id='contact-container'>
-        <h1 class='section-header' id='header-contact'>contact</h1>
-        <svg id='line-contact' height="10" width="420">
-            <path d='m420 10, l-420 0'/>
-        </svg>
+        <h1 class='section-header' id='header-contact'>contact
+          <svg id='line-contact' height="10" width="420">
+              <path d='m420 10, l-420 0'/>
+          </svg>
+        </h1>
         <section class='contact'>
           <div class='contact-container'>
             <div class='email-container'>
