--- a/index.html
+++ b/index.html
@@ -51,19 +51,8 @@
           </section>
           <!-- <img id='multi-shapes' src='./images/shapes-multi.png'/> -->
         </section>
-        <img id='multi-shapes'  src='./images/shapes-multi3.png'/>
-        <img id='green-shape'  src='./images/green-shape.png'/>
-
-        <!-- <svg id=curved-text>
-            <defs>
-              <path id="p" />
-            </defs>
-            <text>
-              <textPath xlink:href="#p">
-                We go up, then we go down, then up again
-              </textPath>
-            </text>
-          </svg> -->
+        <!-- <img id='multi-shapes'  src='./images/shapes-multi-bw.png'/> -->
+        <!-- <img id='green-shape'  src='./images/green-shape.png'/>  -->
 
           <!-- <svg id="my-svg" viewBox="0 0 800 500">
               <path id="curve" d="M-0.197,116.376c97.423,6.113,203.929-2.996,290.347-22.129c78.144-17.301,209.913-58.106,295.18-58.106
@@ -136,17 +125,18 @@
           </div>
           <div id='selected-container'>
             <h1 id='selected-header'>selected works</h1>
+            <p></p>
           </div>
           
           <div id='flashcards' class='project-container'>
-            <h3 id='flashcards-header'><a class='strike-through' href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></a>
+            <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></a>
             <div id='flashcards-image' class='project-image'>
               <div class='image-overlay' id='flashcard-overlay'></div>
             </div>
           </div>
 
           <div id='budget' class='project-container'>
-            <h3 id='budget-header'><a class='strike-through' href='https://sleepy-heisenberg-1542ca.netlify.com'>budget calculator</h3></a>
+            <h3 id='budget-header'><a href='https://sleepy-heisenberg-1542ca.netlify.com'>budget calculator</h3></a>
             <div id='budget-app-image' class='project-image'>
               <div class='image-overlay' id='budget-overlay'></div>
             </div>
