work: align elements

--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
           </div>
           <div id='selected-container'>
             <h1 id='selected-header'>selected works</h1>
-            <p></p>
+            <p id='selected-p'>explore these featured projects using vanilla JavaScript and jquery</p>
           </div>
           
           <div id='flashcards' class='project-container'>
-            <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></a>
+            <h3 id='flashcards-header'><a class='strike-through' href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></a>
             <div id='flashcards-image' class='project-image'>
               <div class='image-overlay' id='flashcard-overlay'></div>
             </div>
           </div>
 
           <div id='budget' class='project-container'>
-            <h3 id='budget-header'><a href='https://sleepy-heisenberg-1542ca.netlify.com'>budget calculator</h3></a>
+            <h3 id='budget-header'><a class='strike-through' href='https://sleepy-heisenberg-1542ca.netlify.com'>budget calculator</h3></a>
             <div id='budget-app-image' class='project-image'>
               <div class='image-overlay' id='budget-overlay'></div>
             </div>
