black/white background

--- a/index.html
+++ b/index.html
@@ -49,20 +49,7 @@
             <p id='l2'>l</p>
             <p id='o'>o</p>
           </section>
-          <!-- <img id='multi-shapes' src='./images/shapes-multi.png'/> -->
         </section>
-        <!-- <img id='multi-shapes'  src='./images/shapes-multi-bw.png'/> -->
-        <!-- <img id='green-shape'  src='./images/green-shape.png'/>  -->
-
-          <!-- <svg id="my-svg" viewBox="0 0 800 500">
-              <path id="curve" d="M-0.197,116.376c97.423,6.113,203.929-2.996,290.347-22.129c78.144-17.301,209.913-58.106,295.18-58.106
-              c108.75,0,151.474,55.98,151.474,96.371c0,66.003-28.409,86.428-75.737,125.424c-60.201,49.603-178.874,45.055-318.483,84.325
-              c-65.476,18.417-91.477,42.82-44.982,103.098c44.786,58.061,162.858,21.266,243.672,31.923" />
-              <text x="25">
-                <textPath id="my-path" xlink:href="#curve">
-                </textPath>
-              </text>
-            </svg> -->
 
         <div id='hello-container'>
           <span id='main-hello'>hello</span>
@@ -103,7 +90,7 @@
       </div>
     </div>
 
-    <div class='panel' id='work-panel' data-color='white'>
+    <div class='panel' id='work-panel' data-color='black'>
       <div class='section-container' id='work-container'>
         <h1 class='section-header' id='header-work'>work
           <svg id='line-work' height='10' width='525'>
