--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class='panel' id='work-panel' data-color='black'>
+    <div class='panel' id='work-panel' data-color='white'>
       <div class='section-container' id='work-container'>
         <h1 class='section-header' id='header-work'>work
           <svg id='line-work' height='10' width='525'>
