--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <p id='l2'>l</p>
             <p id='o'>o</p>
           </section>
+          <img id='headshot' src='./images/Abigail_headshot.jpg'/>
         </section>
 
         <div id='hello-container'>
@@ -82,7 +83,6 @@
             <br />        
           </p>
         </div>
-          <!-- <img id='headshot' src='./images/Abigail_headshot_bw.jpg'/> -->
         </section>
         <p class='intro-span' id='extra-info-span'>
           <span id='about-hello-span'>hello,</span> i'm a twenty-four year old developer with a visual art background. in 2018 i received my BFA and BS of Psychology from the University of Utah. with a love for minimalism and color, i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
