--- a/index.html
+++ b/index.html
@@ -19,23 +19,22 @@
   </div>
 
   <main>
-    <div class='panel' id='main-panel' data-color='white'>
+    <div class='panel' id='main-panel' data-color='peach'>
       <div class='section-container'>
         <section class='name'>
           <h1 id='abigail'>abigai</h1>
           <h1 id='mitchell'>mitchel</h1>
             <svg id="line-left" height="10" width="110">
               <path d='m100 10, l-90 0'
-              style="stroke:rgb(0, 0, 0);stroke-width:3" />
+               />
             </svg>
           <section class='dev-container'>
             <h2 id='web-dev'>full stack web developer</h2>
               <svg id="line-vertical" height="410" width="10">
-                <path d='m10 10, l0 410'
-                style="stroke:rgb(0, 0, 0);stroke-width:3" />
+                <path d='m10 10, l0 410'/>
             </svg>
           </section>
-          <img id='l-letter' src='./images/squiggle-l-letter.png'/>
+          <img id='l-letter' src='./images/squiggle-l-blue.png'/>
           <span id='create-span'>
               let's create something
             <a href='#header-contact' class='strike-through' id='create-something-link'>
@@ -43,11 +42,21 @@
             </a>
           </span>
           <section id='hello-section'>
-            <p id='h'>h</p>
+            <!-- <p id='h'>h</p>
             <p id='e'>e</p>
             <p id='l1'>l</p>
             <p id='l2'>l</p>
-            <p id='o'>o</p>
+            <p id='o'>o</p> -->
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <!-- <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p>
+            <p>HELLO</p> -->
           </section>
           <img id='headshot' src='./images/Abigail_headshot.jpg'/>
         </section>
@@ -90,7 +99,7 @@
       </div>
     </div>
 
-    <div class='panel' id='work-panel' data-color='white'>
+    <div class='panel' id='work-panel' data-color='peach'>
       <div class='section-container' id='work-container'>
         <h1 class='section-header' id='header-work'>work
           <svg id='line-work' height='10' width='525'>
@@ -112,7 +121,7 @@
           </div>
           <div id='selected-container'>
             <h1 id='selected-header'>selected works</h1>
-            <p id='selected-p'>explore these featured projects using vanilla JavaScript and jquery</p>
+            <p id='selected-p'>explore these featured projects using vanilla JavaScript and jQuery</p>
           </div>
           
           <div id='flashcards' class='project-container'>
@@ -133,7 +142,7 @@
       </div>
     </div>
 
-    <div class='panel' id='contact-panel' data-color='white'>
+    <div class='panel' id='contact-panel' data-color='peach'>
       <div class='section-container' id='contact-container'>
         <h1 class='section-header' id='header-contact'>contact
           <svg id='line-contact' height="10" width="420">
