--- a/index.html
+++ b/index.html
@@ -42,21 +42,6 @@
             </a>
           </span>
           <section id='hello-section'>
-            <!-- <p id='h'>h</p>
-            <p id='e'>e</p>
-            <p id='l1'>l</p>
-            <p id='l2'>l</p>
-            <p id='o'>o</p> -->
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <!-- <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p>
-            <p>HELLO</p> -->
           </section>
           <img id='headshot' src='./images/Abigail_headshot.jpg'/>
         </section>
@@ -121,23 +106,14 @@
           </div>
           <div id='selected-container'>
             <h1 id='selected-header'>selected works</h1>
-            <p id='selected-p'>explore these featured projects using vanilla JavaScript and jQuery</p>
+            <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
           </div>
-          
+          <div id='seeker' class='project-container'>
+            <h3 id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>Seeker App</h3></a>
+          </div>
           <div id='flashcards' class='project-container'>
-            <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>flashcards</h3></a>
-            <div id='flashcards-image' class='project-image'>
-              <div class='image-overlay' id='flashcard-overlay'></div>
-            </div>
+            <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</h3></a>
           </div>
-
-          <div id='budget' class='project-container'>
-            <h3 id='budget-header'><a href='https://sleepy-heisenberg-1542ca.netlify.com'>budget calculator</h3></a>
-            <div id='budget-app-image' class='project-image'>
-              <div class='image-overlay' id='budget-overlay'></div>
-            </div>
-          </div>
-
         </section>
       </div>
     </div>
@@ -160,8 +136,7 @@
               <div id='follow'>
                 <ul>
                   <li id='follow-link'><a class='strike-through' href='https://github.com/abigailmitchell4'>Github</a></li>
-                  <li id='follow-link'><a class='strike-through' href='https://linkedin.com/in/abigail-mitchell-283965185' >Linkdin</a></li>
-                  <li id='follow-link'><a class='strike-through' href='https://www.instagram.com/abbyamour/' >Instagram</a></li>
+                  <li id='follow-link'><a class='strike-through' href='https://www.linkedin.com/in/abigail-mitchell-283965185/'>LinkedIn</a></li>
                 </ul>
               </div>
             </div>
