--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel='stylesheet' href='style.css'/>
   <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Archivo:500|DM+Sans:500|Work+Sans:500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Snippet&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap" rel="stylesheet">
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -19,7 +19,7 @@
   </div>
 
   <main>
-    <div class='panel' id='main-panel' data-color='peach'>
+    <div class='panel' id='main-panel' data-color='gray'>
       <div class='section-container'>
         <section class='name'>
           <h1 id='abigail'>abigai</h1>
@@ -30,11 +30,11 @@
             </svg>
           <section class='dev-container'>
             <h2 id='web-dev'>full stack web developer</h2>
-              <svg id="line-vertical" height="410" width="10">
-                <path d='m10 10, l0 410'/>
+              <svg id="line-vertical" height="414" width="10">
+                <path d='m10 10, l0 414'/>
             </svg>
           </section>
-          <img id='l-letter' src='./images/squiggle-l-blue.png'/>
+          <img id='l-letter' src='./images/red-l-squiggle.png'/>
           <span id='create-span'>
               let's create something
             <a href='#header-contact' class='strike-through' id='create-something-link'>
@@ -84,7 +84,7 @@
       </div>
     </div>
 
-    <div class='panel' id='work-panel' data-color='peach'>
+    <div class='panel' id='work-panel' data-color='green'>
       <div class='section-container' id='work-container'>
         <h1 class='section-header' id='header-work'>work
           <svg id='line-work' height='10' width='525'>
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div class='panel' id='contact-panel' data-color='peach'>
+    <div class='panel' id='contact-panel' data-color='gray'>
       <div class='section-container' id='contact-container'>
         <h1 class='section-header' id='header-contact'>contact
           <svg id='line-contact' height="10" width="420">
@@ -129,7 +129,7 @@
           <div class='contact-container'>
             <div class='email-container'>
               <h4>email</h4>
-              <h3>abby.w.mitchell@gmail.com</h3>
+              <p>abby.w.mitchell@gmail.com</p>
             </div>
             <div class='follow-container'>
               <h4>follow</h4>
