--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
           </div>
           <div id='seeker' class='project-container'>
-            <h3 id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>Seeker App</h3></a>
+            <h3 id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>DevPoint Seekr</h3></a>
           </div>
           <div id='flashcards' class='project-container'>
             <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</h3></a>
