--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <path d='m10 10, l0 414'/>
             </svg>
           </section>
-          <img id='l-letter' src='./images/red-l-squiggle.png'/>
+          <!-- <img id='l-letter' src='./images/red-l-squiggle.png'/> -->
+          
           <span id='create-span'>
               let's create something
             <a href='#header-contact' class='strike-through' id='create-something-link'>
@@ -79,7 +80,7 @@
         </div>
         </section>
         <p class='intro-span' id='extra-info-span'>
-          <span id='about-hello-span'>hello,</span> i'm a twenty-four year old developer with a visual art background. in 2018 i received my BFA and BS of Psychology from the University of Utah. with a love for minimalism and color, i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
+          <span id='about-hello-span'>hello,</span> i'm a twenty-four year old web developer with a visual art background. in 2018 i received my BFA and BS of Psychology from the University of Utah. with a love for minimalism and color, i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
         </p>
       </div>
     </div>
@@ -92,27 +93,33 @@
           </svg>
         </h1>
         <section class='work'>
-          <div class='skills-container'>
-            <h3 id='skills-text'>skills</h3>
-            <ul id='skills-list'>
-              <li>HTML5</li>
-              <li>CSS / SCSS</li>
-              <li>React</li>
-              <li>Javascript / ES6</li>
-              <li>Ruby on Rails</li>
-              <li>Illustration</li>
-              <li>Photoshop</li>
-            </ul>
+          <h1 id='selected-header'>selected works</h1>
+          <div class='main-selected-container'>
+            <div id='selected-container'>
+              <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
+            </div>
+            <div class='skills-container'>
+              <h3 id='skills-text'>skills</h3>
+              <ul id='skills-list'>
+                <li>HTML5</li>
+                <li>CSS / SCSS</li>
+                <li>React</li>
+                <li>Javascript / ES6</li>
+                <li>Ruby on Rails</li>
+                <li>Illustration</li>
+                <li>Photoshop</li>
+              </ul>
+            </div>
           </div>
-          <div id='selected-container'>
-            <h1 id='selected-header'>selected works</h1>
-            <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
-          </div>
-          <div id='seeker' class='project-container'>
-            <h3 id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>DevPoint Seekr</h3></a>
-          </div>
-          <div id='flashcards' class='project-container'>
-            <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</h3></a>
+          <div id='projects'>
+            <div id='seeker' class='project-container'>
+              <h3 id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>DevPoint Seekr</h3></a>
+              <p class='number'>01</p>
+            </div>
+            <div id='flashcards' class='project-container'>
+              <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</h3></a>
+              <p class='number'>02</p>
+            </div>
           </div>
         </section>
       </div>
