--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <path d='m10 10, l0 414'/>
             </svg>
           </section>
-          <!-- <img id='l-letter' src='./images/red-l-squiggle.png'/> -->
-          
+          <img id='l-letter' src='./images/red-l-squiggle.png'/>
           <span id='create-span'>
               let's create something
             <a href='#header-contact' class='strike-through' id='create-something-link'>
@@ -43,6 +42,8 @@
             </a>
           </span>
           <section id='hello-section'>
+              <h2 id='hello-text'>hello</h2>
+              <svg id='hello-svg' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><defs><path d="M62.71 203.85h305.71v200H62.71v-200z" id="a"/></defs><use xlink:href="#a"/></svg>
           </section>
           <img id='headshot' src='./images/Abigail_headshot.jpg'/>
         </section>
