--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <nav class='am-nav'>
+    <a href='#abigail' id='am-button' class='strike-through'>am</a>
+  </nav>
   <div class='navigation-menu'>
     <ul>
       <li><a href='#header-about' id='about-button'class='strike-through'>about</a></li>
