--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
           <div class='contact-container'>
             <div class='email-container'>
               <h4>email</h4>
-              <p>abby.w.mitchell@gmail.com</p>
+              <a id='form-link' class='strike-through' href='form.html'>
+                abby.w.mitchell@gmail.com
+              </a>
             </div>
             <div class='follow-container'>
               <h4>follow</h4>
