--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section class='name'>
           <h1 id='abigail'>abigai</h1>
           <h1 id='mitchell'>mitchel</h1>
+          <img id='l-letter' src='./images/red-l-squiggle.png'/>
             <svg id="line-left" height="10" width="110">
               <path d='m100 10, l-90 0'
                />
@@ -36,24 +37,18 @@
               <svg id="line-vertical" height="414" width="10">
                 <path d='m10 10, l0 414'/>
             </svg>
+            <span id='hello-section'>
+                <h2 id='hello-text'>hello</h2>
+                <!-- <svg id='hello-svg' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><defs><path d="M62.71 203.85h305.71v200H62.71v-200z" id="a"/></defs><use xlink:href="#a"/></svg> -->
+            </span>
           </section>
-          <img id='l-letter' src='./images/red-l-squiggle.png'/>
           <span id='create-span'>
               let's create something
             <a href='#header-contact' class='strike-through' id='create-something-link'>
                 together
             </a>
           </span>
-          <section id='hello-section'>
-              <h2 id='hello-text'>hello</h2>
-              <svg id='hello-svg' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><defs><path d="M62.71 203.85h305.71v200H62.71v-200z" id="a"/></defs><use xlink:href="#a"/></svg>
-          </section>
-          <img id='headshot' src='./images/Abigail_headshot.jpg'/>
         </section>
-
-        <div id='hello-container'>
-          <span id='main-hello'>hello</span>
-        </div>
       </div>
     </div>
    
