--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
   <nav class='am-nav'>
     <a href='#abigail' id='am-button' class='strike-through'>am</a>
   </nav>
-  <div class='navigation-menu'>
-    <ul>
-      <li><a href='#header-about' id='about-button'class='strike-through'>about</a></li>
-      <li><a href='#header-work' id='work-button' class='strike-through'>work</a></li>
-      <li><a href='#header-contact' id='contact-button'class='strike-through'>contact</a></li>
-    </ul>
+  <div class='menu'>
+    <a class='strike-through' id='menu-button'>menu</a>
+    <div class='nav-menu-mobile'>
+      <ul>
+        <li><a href='#header-about' id='about-button'class='strike-through'>about</a></li>
+        <li><a href='#header-work' id='work-button' class='strike-through'>work</a></li>
+        <li><a href='#header-contact' id='contact-button'class='strike-through'>contact</a></li>
+      </ul>
+    </div>
   </div>
+  <div class='nav-menu'>
+      <ul>
+        <li><a href='#header-about' id='about-button'class='strike-through'>about</a></li>
+        <li><a href='#header-work' id='work-button' class='strike-through'>work</a></li>
+        <li><a href='#header-contact' id='contact-button'class='strike-through'>contact</a></li>
+      </ul>
+    </div>
 
   <main>
     <div class='panel' id='main-panel' data-color='gray'>
