--- a/form.html
+++ b/form.html
@@ -15,13 +15,13 @@
 >
   <div class='form-container'>
     <label>
-      Your email:
+      <p>your email</p>
       <input type="text" name="_replyto">
     </label>
     <label>
-      Your message:
+      <p>your message</p>
       <textarea name="message"></textarea>
     </label>
-    <button type="submit">Send</button>
+    <button type="submit">send</button>
   </div>
 </form>
