--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <div class='panel' id='main-panel' data-color='gray'>
       <div class='section-container'>
         <section class='name'>
-          <h1 id='abigail'>abigai</h1>
-          <h1 id='mitchell'>mitchel</h1>
-          <img id='l-letter' src='./images/red-l-squiggle.png'/>
+          <div class='name-main'>
+            <h1 id='abigail'>abigai</h1>
+            <h1 id='mitchell'>mitchel</h1>
+            <img id='l-letter' src='./images/red-l-squiggle.png'/>
+          </div>
             <svg id="line-left" height="10" width="110">
               <path d='m100 10, l-90 0'
                />
