--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
               <h3 id='flashcards-header'><a  href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</h3></a>
               <p class='number'>02</p>
             </div>
+            <div id='tip' class='project-container'>
+                <h3 id='tip-header'><a  href='https://amazing-knuth-d2ddd3.netlify.com/'>Tip Calculator</h3></a>
+                <p class='number'>03</p>
+              </div>
           </div>
         </section>
       </div>
