--- a/form.html
+++ b/form.html
@@ -8,20 +8,24 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
       <title>contact</title>
   </head>
-
-<form
-  action="https://formspree.io/xgekyowz"
-  method="POST"
->
-  <div class='form-container'>
-    <label>
-      <p>your email</p>
-      <input type="text" name="_replyto">
-    </label>
-    <label>
-      <p>your message</p>
-      <textarea name="message"></textarea>
-    </label>
-    <button type="submit">send</button>
-  </div>
-</form>
+<body>
+  <h1>say hello</h1>
+  <form
+    action="https://formspree.io/xgekyowz"
+    method="POST"
+    class="no-focus-outline"
+  >
+    <div class='form-container'>
+      <label>
+        <p>your email</p>
+        <input type="text" name="_replyto">
+      </label>
+      <label>
+        <p>your message</p>
+        <textarea name="message"></textarea>
+      </label>
+      <button type="submit">send</button>
+    </div>
+  </form>
+  <script type="text/javascript" src='main.js'></script>
+</body>
