--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </span>
             <span id='create-span'>
                 let's create something
-              <a href='#header-contact' class='strike-through' id='create-something-link'>
+              <a href='form.html' class='strike-through' id='create-something-link'>
                   together
               </a>
             </span>
@@ -111,24 +111,44 @@
           </svg>
         </h1>
         <section class='work'>
-          <h1 id='selected-header'>selected works</h1>
-          <div class='main-selected-container'>
-            <div id='selected-container'>
-              <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
-            </div>
-            <div class='skills-container'>
-              <h3 id='skills-text'>skills</h3>
-              <ul id='skills-list'>
-                <li>HTML5</li>
-                <li>CSS / SCSS</li>
-                <li>React</li>
-                <li>Javascript / ES6</li>
-                <li>Ruby on Rails</li>
-                <li>Illustration</li>
-                <li>Photoshop</li>
-              </ul>
+          <div class='work-container'>
+            <h1 id='selected-header'>selected works</h1>
+            <div class='main-selected-container'>
+              <div id='selected-container'>
+                <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
+              </div>
+              <div class='skills-container'>
+                <h3 id='skills-text'>skills</h3>
+                <ul id='skills-list'>
+                  <li>HTML5</li>
+                  <li>CSS / SCSS</li>
+                  <li>React</li>
+                  <li>Javascript / ES6</li>
+                  <li>Ruby on Rails</li>
+                  <li>Illustration</li>
+                  <li>Photoshop</li>
+                </ul>
+              </div>
             </div>
           </div>
+          <div class='work-container-mobile'>
+              <div class='skills-container'>
+                  <h3 id='skills-text'>skills</h3>
+                  <ul id='skills-list'>
+                    <li>HTML5</li>
+                    <li>CSS / SCSS</li>
+                    <li>React</li>
+                    <li>Javascript / ES6</li>
+                    <li>Ruby on Rails</li>
+                    <li>Illustration</li>
+                    <li>Photoshop</li>
+                  </ul>
+                </div>
+              <h1 id='selected-header'>selected works</h1>
+              <div class='main-selected-container'>
+                  <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
+              </div>
+            </div>
           <div id='projects'>
             <div id='seeker' class='project-container'>
               <h3 class='project-h' id='seeker-header'><a href='https://seeker-dpl.herokuapp.com/'>DevPoint Seekr</a></h3>
