--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </div>
     </div>
 
-    <div class='panel' id='contact-panel' data-color='gray'>
+    <div class='panel' id='contact-panel' data-color='brown'>
       <div class='section-container' id='contact-container'>
         <h1 class='section-header' id='header-contact'>contact
           <svg id='line-contact' height="3" width="420">
