--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <p class='number'>01</p>
             </div>
               <div id='hcfa' class='project-container'>
-                <h3 class='project-h' id='hcfa-header'><span>A.M. Fine Art</span></h3>
+                <h3 class='project-h' id='hcfa-header'><span>H.C. Fine Art</span></h3>
                 <p class='number'>02</p>
               </div>
           </div>
