--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
       </label>
       <button type="submit">send</button>
     </div>
-    <input type="hidden" name="_next" value="https://abigailwmitchell.com/thank_you.html"/>
+    <input type="hidden" name="_next" value="https://abigailwmitchell.com/thanks.html"/>
   </form>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src='main.js'></script>
