--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav class='am-nav'>
-    <a href='#abigail' id='am-button' class='strike-through'>am</a>
+      <a href='#abigail' id='am-button' class='strike-through'>am</a>
   </nav>
   <div class='menu'>
     <a class='strike-through' id='menu-button'>menu</a>
@@ -180,14 +180,14 @@
                 />
               </svg>
             </div>
+            <div id='hcfa' class='project-container'>
+                <h3 class='project-h' id='hcfa-header'><a href='https://gallant-bohr-291f83.netlify.com/'>H.C. Fine Art</a></h3>
+                <p class='number'>01</p>
+            </div>
             <div id='ccc' class='project-container'>
               <h3 class='project-h' id='ccc-header'><span>City Creek Counseling</span></h3>
-              <p class='number'>01</p>
+              <p class='number'>02</p>
             </div>
-              <div id='hcfa' class='project-container'>
-                <h3 class='project-h' id='hcfa-header'><span>H.C. Fine Art</span></h3>
-                <p class='number'>02</p>
-              </div>
           </div>
         </section>
       </div>
