--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <p class='number'>01</p>
             </div>
             <div id='ccc' class='project-container'>
-              <h3 class='project-h' id='ccc-header'><a href='https://upbeat-swanson-f127ff.netlify.com/'>City Creek Counseling</a></h3>
+              <h3 class='project-h' id='ccc-header'><a href='https://cranky-elion-840efd.netlify.com/'>City Creek Counseling</a></h3>
               <p class='number'>02</p>
             </div>
           </div>
