--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1 id='selected-header'>selected works</h1>
             <div class='main-selected-container'>
               <div id='selected-container'>
-                <p id='selected-p'>explore these featured projects using vanilla JavaScript, jQuery, and React</p>
+                <p id='selected-p'>explore these featured projects using vanilla JS, jQuery, Node.js, and React</p>
               </div>
               <div class='skills-container'>
                 <h3 id='skills-text'>skills</h3>
@@ -158,8 +158,8 @@
               <h3 class='project-h' id='flashcards-header'><a href='https://vigilant-gates-68901c.netlify.com/'>Flashcards</a></h3>
               <p class='number'>02</p>
             </div>
-            <div id='tip' class='project-container'>
-              <h3 class='project-h' id='tip-header'><a href='https://amazing-knuth-d2ddd3.netlify.com/'>Tip Calculator</a></h3>
+            <div id='weather' class='project-container'>
+              <h3 class='project-h' id='weather-header'><a href='https://weather-app-abigailm.herokuapp.com/'>Weather App</a></h3>
               <p class='number'>03</p>
             </div>
           </div>
