updated into copy

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         </section>
         <p class='intro-span' id='extra-info-span'>
-          <span id='about-hello-span'>hello,</span> i'm a twenty-four year old web developer with a visual art background. in 2018 i received my BFA and BS of Psychology from the University of Utah. with a love for minimalism and color, i enjoy creating applications and websites with unique UI/UX. when i'm not coding, i'm likely either painting, climbing, or traveling.
+          <span id='about-hello-span'>hello,</span> I'm a dedicated and passionate Front-end Developer with 3+ years of web development experience 27+ website launches. As a developer with a strong art background, I take a holistic approach to every new project. I enjoy building websites with fun, unique, accessible, and responsive design. As an avid learner, I seek to discover new and better ways to solve problems and introduce creativity into a project. when i'm not coding, i'm likely either painting, climbing, knitting, or traveling.
         </p>
       </div>
     </div>
